--- a/evaluacion/evaluacion.html
+++ b/evaluacion/evaluacion.html
@@ -7,7 +7,7 @@
     <meta name="description" content="OVI desde el mockup y guión">
     <meta name="keywords" content="diseño web, mockups, guion">
     <meta name="author" content="Grupo_19 Curso_Diseños_web">
-    <link rel="stylesheet" type="text/css" href="css/estilos.css">
+    <link rel="stylesheet" type="text/css" href="/OVI_Grupo19/css/estilos.css">
 </head>
 
 <body>
@@ -51,7 +51,7 @@
                 <h2><a>Evaluación</a>
                     <h5><a>Apreciado estudiante, bienvenido al OVI de Diseño de Sitios Web.  En esta oportunidad, usted realizara una evaluacion de aprendizaje sobre lo adquirido en el material de estudio del ovi sobre los temas de Git/GitHub, HTML5 Y CSS3. 
 				Ingresar al siguiente enlace, Ingresando en la imagen Evaluar.</a><br>
-                        <a title="Evaluación" href="https://www.onlineexambuilder.com/es/git-github-html5-y-css3/exam-278176"><img src="imagenes/evaluacion.png" /></a>
+                        <a title="Evaluación" href="https://www.onlineexambuilder.com/es/git-github-html5-y-css3/exam-278176"><img src="/OVI_Grupo19/imagenes/evaluacion.png" /></a>
             </div>
         </div>
     </section>
