--- a/evaluacion/evaluacion.html
+++ b/evaluacion/evaluacion.html
@@ -49,9 +49,10 @@
             </div>
             <div id="bienvenido">
                 <h2><a>Evaluación</a>
-                    <h5><a>Apreciado estudiante, bienvenido al OVI de Diseño de Sitios Web.  En esta oportunidad, usted realizara una evaluacion de aprendizaje sobre lo adquirido en el material de estudio del ovi sobre los temas de Git/GitHub, HTML5 Y CSS3. 
-				Ingresar al siguiente enlace, Ingresando en la imagen Evaluar.</a><br>
-                        <a title="Evaluación" href="https://www.onlineexambuilder.com/es/git-github-html5-y-css3/exam-278176"><img src="/OVI_Grupo19/imagenes/evaluacion.png" /></a>
+                    <h5><a>Apreciado estudiante en esta oportunidad, usted realizara una evaluacion sobre lo aprendido en el material de estudio del ovi sobre los temas de Git/GitHub, HTML5 Y CSS3. 
+				Haga click en el enlace en la imagen Evaluar.</a><br>
+			    <iframe name="iframe" width="640" height="270" src="/OVI_Grupo19/evaluacion/paginas/index.html">" frameborder="0" scrolling="yes" ></iframe>
+                  
             </div>
         </div>
     </section>
