actualización de links

--- a/evaluacion/evaluacion.html
+++ b/evaluacion/evaluacion.html
@@ -37,13 +37,13 @@
             <div id="fondo">
                 <div id="menu">
                     <h2><a>Contenido:</a>
-                        <h3><img src="imagenes/ico1.png" /><a href="index.html">Material de Lectura</a>
-                            <h3><img src="imagenes/ico2.png" /><a href="/OVI_Grupo19/multimedia/multimedia.html">Material Multimedia</a>
-                                <h3><img src="imagenes/ico3.png" /><a href="index.html">Recursos</a>
-                                    <h3><img src="imagenes/ico4.png" /><a href="Evaluación.html">Evaluación</a>
+                        <h3><img src="/OVI_Grupo19/imagenes/ico0.png"/><a href="/OVI_Grupo19/">Inicio</a>
+			  <h3><img src="/OVI_Grupo19/imagenes/ico1.png"/><a href="index.html">Material de Lectura</a>
+                            <h3><img src="/OVI_Grupo19/imagenes/ico2.png" /><a href="/OVI_Grupo19/multimedia/multimedia.html">Material Multimedia</a>
+                                <h3><img src="/OVI_Grupo19/imagenes/ico3.png" /><a href="index.html">Recursos</a>
+                                    <h3><img src="/OVI_Grupo19/imagenes/ico4.png" /><a href="Evaluación.html">Evaluación</a>
                                         <p>
-                                            <a href="index.html"><img src="imagenes/left.png" /></a>
-                                            <a href="index.html"><img src="imagenes/right.png" /></a>
+                                            <a href="index.html"><img src="/OVI_Grupo19/imagenes/left.png" /></a>
                                             <p>
                 </div>
             </div>
@@ -73,15 +73,15 @@
     <!Aquí van el piecero>
     <footer>
         <p>
-            <a href="index.html">
+            <a href="/OVI_Grupo19/">
                 <font color="#fff">Inicio</a> /
             <a href="index.html">
                 <font color="#fff">Material de Lectura</a> /
-            <a href="index.html">
+            <a href="/OVI_Grupo19/multimedia/multimedia.html">
                 <font color="#fff">Material Multimedia</a> /
             <a href="index.html">
                 <font color="#fff">Recursos</a> /
-            <a href="index.html">
+            <a href="/OVI_Grupo19/evaluacion/evaluacion.html">
                 <font color="#fff">Evaluación</a>
         </p>
         <p>Grupo 19, Copyright &copy; 2019</p>
