--- a/evaluacion/evaluacion.html
+++ b/evaluacion/evaluacion.html
@@ -41,7 +41,7 @@
 			  <h3><img src="/OVI_Grupo19/imagenes/ico1.png"/><a href="index.html">Material de Lectura</a>
                             <h3><img src="/OVI_Grupo19/imagenes/ico2.png" /><a href="/OVI_Grupo19/multimedia/multimedia.html">Material Multimedia</a>
                                 <h3><img src="/OVI_Grupo19/imagenes/ico3.png" /><a href="index.html">Recursos</a>
-                                    <h3><img src="/OVI_Grupo19/imagenes/ico4.png" /><a href="Evaluación.html">Evaluación</a>
+                                    <h3><img src="/OVI_Grupo19/imagenes/ico4.png" /><a href="/OVI_Grupo19/evaluacion/evaluacion.html">Evaluación</a>
                                         <p>
                                             <a href="index.html"><img src="/OVI_Grupo19/imagenes/left.png" /></a>
                                             <p>
@@ -51,7 +51,7 @@
                 <h2><a>Evaluación</a>
                     <h5><a>Apreciado estudiante en esta oportunidad, usted realizara una evaluacion sobre lo aprendido en el material de estudio del ovi sobre los temas de Git/GitHub, HTML5 Y CSS3. 
 				Haga click en el enlace en la imagen Evaluar.</a><br>
-			    <iframe name="iframe" width="800" height="300" src="/OVI_Grupo19/evaluacion/paginas/index.html">" frameborder="0" scrolling="yes" ></iframe>
+			    <iframe name="iframe" width="800" height="300" src="/OVI_Grupo19/evaluacion/paginas/index.html">" frameborder="0" scrolling="auto" ></iframe>
                   
             </div>
         </div>
