--- a/Evaluación.html
+++ b/Evaluación.html
@@ -31,7 +31,6 @@
     </header>
 
 
-<<<<<<< HEAD
     <!Aquí van los contenidos>
     <section id="cajas">
         <div class="contenedor">
@@ -49,36 +48,13 @@
                 </div>
             </div>
             <div id="bienvenido">
-                <h2><a>Bienvenido</a>
-                    <h5><a>Apreciado estudiante, bienvenido al OVI de Diseño de Sitios Web.  En esta oportunidad, usted incursionara en el aprendizaje de la herramienta de controlador de versiones como es Git/GitHub, en el uso del programa de Hiper Texto HTML5 y el uso de hojas de estilo CSS3. 
-				Es necesario que lea todo el material de lectura propuesto y reproduzca todo el material multimedia que le ayudará a alcanzar un concepto y un aprendizaje más claro del curso.</a>
-                        <p><iframe width="500" height="260" src="https://www.youtube.com/embed/-jCVKds3Njo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+                <h2><a>Evaluación</a>
+                    <h5><a>Apreciado estudiante, bienvenido al OVI de Diseño de Sitios Web.  En esta oportunidad, usted realizara una evaluacion de aprendizaje sobre lo adquirido en el material de estudio del ovi sobre los temas de Git/GitHub, HTML5 Y CSS3. 
+				Ingresar al siguiente enlace, Ingresando en la imagen Evaluar.</a><br>
+                        <a title="Evaluación" href="https://www.onlineexambuilder.com/es/git-github-html5-y-css3/exam-278176"><img src="imagenes/evaluacion.png" /></a>
             </div>
         </div>
     </section>
-=======
-	<!Aquí van los contenidos>
-	<section id="cajas">
-		<div class="contenedor">
-			<div id="fondo">
-				<div id="menu">
-					<h2><a>Contenido:</a>
-					<h3><img src="imagenes/ico1.png"/><a href="index.html">Material de Lectura</a>
-					<h3><img src="imagenes/ico2.png"/><a href="/OVI_Grupo19/multimedia/multimedia.html">Material Multimedia</a>
-					<h3><img src="imagenes/ico3.png"/><a href="index.html">Recursos</a>
-					<h3><img src="imagenes/ico4.png"/><a href="/OVI_Grupo19/evaluacion/evaluacion.html">Evaluación</a>
-			        <p><a href="index.html"><img src="imagenes/left.png"/></a> <a href="index.html"><img src="imagenes/right.png"/></a><p>
-				</div>
-			</div>
-			<div id="bienvenido">
-				<h2><a>Bienvenido</a>
-				<h5><a>Apreciado estudiante, bienvenido al OVI de Diseño de Sitios Web.  En esta oportunidad, usted incursionara en el aprendizaje de la herramienta de controlador de versiones como es Git/GitHub, en el uso del programa de Hiper Texto HTML5 y el uso de hojas de estilo CSS3. 
-				Es necesario que lea todo el material de lectura propuesto y reproduzca todo el material multimedia que le ayudará a alcanzar un concepto y un aprendizaje más claro del curso.</a><p><iframe width="500" height="260" src="https://www.youtube.com/embed/-jCVKds3Njo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-			</div>
-		</div>	
-	</section>	
->>>>>>> c31b2f3df1706114bdc3b54c4780cecd75c51ba9
-
 
     <!Aquí va la ficha técnica>
     <section id="ficha">
@@ -86,7 +62,7 @@
             <div id="info">
                 <h2><a>Ficha técnica</a>
                     <h5><a>Curso: Diseño de Sitios Web - 301122</a> | <a>Unidad: Fase 3: Construcción</a> | <a>Actividad: Crear un OVI en formato WEB con HTML5 y CSS3.</a> | <a>Tutor: Ing. Josue Ignacio Ochoa.</a>
-                        <h5><a>Grupo: 301122_19</a> | <a>Estudiantes: Jorge Eliecer Arredondo, Cod.10017722</a> | <a>Manuel Alejandro Ramirez, Cod</a> | <a>Angela Patricia Males, Cod.</a> | <a>Oscar Isidro Rodriguez, Cod.</a>| <a>Paola Amado Angulo, Cod.1103712413</a>
+                        <h5><a>Grupo: 301122_19</a> | <a>Estudiantes: Jorge Eliecer Arredondo, Cod.10017722</a> | <a>Manuel Alejandro Ramirez, Cod</a> | <a>Angela Patricia Males, Cod.</a> | <a>Oscar Isidro Rodriguez, Cod.</a>|<a>Paola Amado Angulo, Cod.1103712413</a>
                             <h5><a>Universidad Nacional, Abierta y a Distancia, UNAD. Escuela de Ciencias Básicas, Tecnología e Ingeniería, ECBTI. Abril 11 de 2019</a>
             </div>
         </div>
