--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div id="info">
                 <h2><a>Ficha técnica</a>
                     <h5><a>Curso: Diseño de Sitios Web - 301122</a> | <a>Unidad: Fase 3: Construcción</a> | <a>Actividad: Crear un OVI en formato WEB con HTML5 y CSS3.</a> | <a>Tutor: Ing. Josue Ignacio Ochoa.</a>
-                        <h5><a>Grupo: 301122_19</a> | <a>Estudiantes: Jorge Eliecer Arredondo, Cod.10017722</a> | <a>Manuel Alejandro Ramirez, Cod</a> | <a>Angela Patricia Males, Cod.</a> | <a>Oscar Isidro Rodriguez, Cod.</a>| <a>Paola Amado Angulo, Cod.1103712413</a>
+                        <h5><a>Grupo: 301122_19</a> | <a>Estudiantes: Jorge Eliecer Arredondo, Cod.10017722</a> | <a>Manuel Alejandro Ramirez, Cod</a> | <a>Angela Patricia Males, Cod.</a> | <a>Oscar Isidro Rodriguez, Cod.1014185269</a>| <a>Paola Amado Angulo, Cod.1103712413</a>
                             <h5><a>Universidad Nacional, Abierta y a Distancia, UNAD. Escuela de Ciencias Básicas, Tecnología e Ingeniería, ECBTI. Abril 11 de 2019</a>
             </div>
         </div>
