Reparacion META UTF-8

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ﻿<html>
 <head>
 	<title>OVI Grupo 19 | Bienvenidos</title>
-	<meta charset="utf-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 	<meta name="viewports" content="width=device-width">
-	<meta name="description" content="OVI desde el mockup y guiÃ³n">
-	<meta name="keywords" content="diseÃ±o web, mockups, guion">
-	<meta name="author" content="Grupo_19 Curso_DiseÃ±os_web">
+	<meta name="description" content="OVI desde el mockup y guión">
+	<meta name="keywords" content="diseño web, mockups, guion">
+	<meta name="author" content="Grupo_19 Curso_Diseños_web">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
