--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-﻿<html>
+<!DOCTYPE html>
+<html>
 <head>
 	<title>OVI Grupo 19 | Bienvenidos</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -11,7 +12,7 @@
 <body>
 
 
-	<!AquÃ­ va la cabecera>
+	<Aquí va la cabecera>
 	<header>
 		<div class="contenedor" >
 			<div id="marca">
@@ -29,7 +30,7 @@
 	</header>
 
 
-	<!AquÃ­ van los contenidos>
+	<Aquí van los contenidos>
 	<section id="cajas">
 		<div class="contenedor">
 			<div id="fondo">
@@ -39,35 +40,35 @@
 					<h3><img src="imagenes/ico1.png"/><a href="index.html">Material de Lectura</a>
 					<h3><img src="imagenes/ico2.png"/><a href="index.html">Material Multimedia</a>
 					<h3><img src="imagenes/ico3.png"/><a href="index.html">Recursos</a>
-					<h3><img src="imagenes/ico4.png"/><a href="index.html">EvaluaciÃ³n</a>
+					<h3><img src="imagenes/ico4.png"/><a href="index.html">Evaluación</a>
 			        <p><a href="index.html"><img src="imagenes/left.png"/></a> <a href="index.html"><img src="imagenes/right.png"/></a><p>
 				</div>
 			</div>
 			<div id="bienvenido">
 				<h2><a>Bienvenido</a>
-				<h5><a>Apreciado estudiante, bienvenido al OVI de DiseÃ±o de Sitios Web.  En esta oportunidad, usted incursionara en el aprendizaje de la herramienta de controlador de versiones como es Git/GitHub, en el uso del programa de Hiper Texto HTML5 y el uso de hojas de estilo CSS3. 
-				Es necesario que lea todo el material de lectura propuesto y reproduzca todo el material multimedia que le ayudarÃ¡ a alcanzar un concepto y un aprendizaje mÃ¡s claro del curso.</a><p><iframe width="500" height="260" src="https://www.youtube.com/embed/-jCVKds3Njo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+				<h5><a>Apreciado estudiante, bienvenido al OVI de Diseño de Sitios Web.  En esta oportunidad, usted incursionara en el aprendizaje de la herramienta de controlador de versiones como es Git/GitHub, en el uso del programa de Hiper Texto HTML5 y el uso de hojas de estilo CSS3. 
+				Es necesario que lea todo el material de lectura propuesto y reproduzca todo el material multimedia que le ayudará a alcanzar un concepto y un aprendizaje más claro del curso.</a><p><iframe width="500" height="260" accelsrc="https://www.youtube.com/embed/-jCVKds3Njo" frameborder="0" allow="erometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 			</div>
 		</div>	
 	</section>	
 
 
-	<!AquÃ­ va la ficha tÃ©cnica>
+	<Aquí va la ficha técnica>
 	<section id="ficha">
 		<div class="contenedor">
 			<div id="info">
-				 <h2><a>Ficha tÃ©cnica</a>
-				<h5><a>Curso: DiseÃ±o de Sitios Web - 301122</a> | <a>Unidad: Fase 3: ConstrucciÃ³n</a> | <a>Actividad: Crear un OVI en formato WEB con HTML5 y CSS3.</a> | <a>Tutor: Ing. Josue Ignacio Ochoa.</a>
+				 <h2><a>Ficha técnica</a>
+				<h5><a>Curso: Diseño de Sitios Web - 301122</a> | <a>Unidad: Fase 3: Construcción</a> | <a>Actividad: Crear un OVI en formato WEB con HTML5 y CSS3.</a> | <a>Tutor: Ing. Josue Ignacio Ochoa.</a>
 				<h5><a>Grupo: 301122_19</a> | <a>Estudiantes: Jorge Eliecer Arredondo, Cod.10017722</a> | <a>Manuel Alejandro Ramirez, Cod</a> | <a>Angela Patricia Males, Cod.</a> | <a>Oscar Isidro Rodriguez, Cod.</a>
-				<h5><a>Universidad Nacional, Abierta y a Distancia, UNAD. Escuela de Ciencias BÃ¡sicas, TecnologÃ­a e IngenierÃ­a, ECBTI. Abril 11 de 2019</a>
+				<h5><a>Universidad Nacional, Abierta y a Distancia, UNAD. Escuela de Ciencias Básicas, Tecnología e Ingeniería, ECBTI. Abril 11 de 2019</a>
 			</div>
 		</div>	
 	</section>	
 
 
-	<!AquÃ­ van el piecero>
+	<Aquí va el piecero>
 	<footer>
-		<p><a href="index.html"><font color="#fff">Inicio</a> / <a href="index.html"><font color="#fff">Material de Lectura</a> / <a href="index.html"><font color="#fff">Material Multimedia</a> / <a href="index.html"><font color="#fff">Recursos</a> / <a href="index.html"><font color="#fff">EvaluaciÃ³n</a></p>
+		<p><a href="index.html"><font color="#fff">Inicio</a> / <a href="index.html"><font color="#fff">Material de Lectura</a> / <a href="index.html"><font color="#fff">Material Multimedia</a> / <a href="index.html"><font color="#fff">Recursos</a> / <a href="index.html"><font color="#fff">Evaluación</a></p>
 		<p>Grupo 19, Copyright &copy; 2019</p>
 	</footer>
 
