Reparación Link del video

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 			<div id="bienvenido">
 				<h2><a>Bienvenido</a>
 				<h5><a>Apreciado estudiante, bienvenido al OVI de Diseño de Sitios Web.  En esta oportunidad, usted incursionara en el aprendizaje de la herramienta de controlador de versiones como es Git/GitHub, en el uso del programa de Hiper Texto HTML5 y el uso de hojas de estilo CSS3. 
-				Es necesario que lea todo el material de lectura propuesto y reproduzca todo el material multimedia que le ayudará a alcanzar un concepto y un aprendizaje más claro del curso.</a><p><iframe width="500" height="260" accelsrc="https://www.youtube.com/embed/-jCVKds3Njo" frameborder="0" allow="erometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+				Es necesario que lea todo el material de lectura propuesto y reproduzca todo el material multimedia que le ayudará a alcanzar un concepto y un aprendizaje más claro del curso.</a><p><iframe width="500" height="260" src="https://www.youtube.com/embed/-jCVKds3Njo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+
 			</div>
 		</div>	
 	</section>	
