--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<h2><a>Contenido:</a>
 					<h3><img src="imagenes/ico1.png"/><a href="index.html">Inicio</a>
 					<h3><img src="imagenes/ico1.png"/><a href="index.html">Material de Lectura</a>
-					<h3><img src="imagenes/ico2.png"/><a href="index.html">Material Multimedia</a>
+					<h3><img src="imagenes/ico2.png"/><a href="/OVI_Gripo19/multimedia/multimedia.html">Material Multimedia</a>
 					<h3><img src="imagenes/ico3.png"/><a href="index.html">Recursos</a>
 					<h3><img src="imagenes/ico4.png"/><a href="index.html">Evaluación</a>
 			        <p><a href="index.html"><img src="imagenes/left.png"/></a> <a href="index.html"><img src="imagenes/right.png"/></a><p>
