--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<div id="menu">
 					<h2><a>Contenido:</a>
 					<h3><img src="imagenes/ico1.png"/><a href="index.html">Inicio</a>
-					<h3><img src="imagenes/ico1.png"/><a href="index.html">Material de Lectura</a>
+					<h3><img src="imagenes/ico1.png"/><a href="lectura/lectura.html">Material de Lectura</a>
 					<h3><img src="imagenes/ico2.png"/><a href="multimedia/multimedia.html">Material Multimedia</a>
 					<h3><img src="imagenes/ico3.png"/><a href="index.html">Recursos</a>
 					<h3><img src="imagenes/ico4.png"/><a href="evaluacion/evaluacion.html">Evaluación</a>
@@ -69,7 +69,7 @@
 
 	<Aquí va el piecero>
 	<footer>
-		<p><a href="index.html"><font color="#fff">Inicio</a> / <a href="index.html"><font color="#fff">Material de Lectura</a> / <a href="index.html"><font color="#fff">Material Multimedia</a> / <a href="index.html"><font color="#fff">Recursos</a> / <a href="index.html"><font color="#fff">Evaluación</a></p>
+		<p><a href="index.html"><font color="#fff">Inicio</a> / <a href="lectura/lectura.html"><font color="#fff">Material de Lectura</a> / <a href="multimedia/multimedia.html"><font color="#fff">Material Multimedia</a> / <a href="index.html"><font color="#fff">Recursos</a> / <a href="evaluacion/evaluacion.html"><font color="#fff">Evaluación</a></p>
 		<p>Grupo 19, Copyright &copy; 2019</p>
 	</footer>
 
