Apuntar a la hoja de estilo

--- a/lectura/lectura.html
+++ b/lectura/lectura.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="OVI desde el mockup y guión">
 	<meta name="keywords" content="diseño web, mockups, guion">
 	<meta name="author" content="Grupo_19 Curso_Diseños_web">
-	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+	<link rel="stylesheet" type="text/css" href="/OVI_grupo19/css/estilos.css">
 </head>
 <body>
 
