--- a/lectura/lectura.html
+++ b/lectura/lectura.html
@@ -35,10 +35,12 @@
 			<div id="fondo">
 				<div id="menu">
 					<h2><a>Contenido:</a>
-					<h3><img src="imagenes/ico1.png"/><a href="index.html">Material de Lectura</a>
-					<h3><img src="imagenes/ico2.png"/><a href="index.html">Material Multimedia</a>
-					<h3><img src="imagenes/ico3.png"/><a href="index.html">Recursos</a>
-					<h3><img src="imagenes/ico4.png"/><a href="index.html">Evaluación</a>
+					<h3><img src="/OVI_Grupo19/imagenes/ico0.png"/><a href="../index.html">Inicio</a>
+					<h3><img src="/OVI_Grupo19/imagenes/ico1.png"/><a href="/OVI_Grupo19/lectura/lectura.html">Material de Lectura</a>
+					<h3><img src="/OVI_Grupo19/imagenes/ico2.png"/><a href="/OVI_Grupo19/multimedia/multimedia.html">Material Multimedia</a>
+					<h3><img src="/OVI_Grupo19/imagenes/ico3.png"/><a href="index.html">Recursos</a>
+					<h3><img src="/OVI_Grupo19/imagenes/ico4.png"/><a href="/OVI_Grupo19/evaluacion/evaluacion.html">Evaluación</a>
+					<p><a href="../index.html"><img src="/OVI_Grupo19/imagenes/left.png"/></a> <a href="/OVI_Grupo19/multimedia/multimedia.html"><img src="/OVI_Grupo19/imagenes/right.png"/></a><p>
 			     </div>
 			</div>
 			<div id="bienvenido">
@@ -66,7 +68,7 @@
 
 	<!Aquí van el piecero>
 	<footer>
-		<p><a href="index.html"><font color="#fff">Inicio</a> / <a href="index.html"><font color="#fff">Material de Lectura</a> / <a href="index.html"><font color="#fff">Material Multimedia</a> / <a href="index.html"><font color="#fff">Recursos</a> / <a href="index.html"><font color="#fff">Evaluación</a></p>
+		<p><a href="../index.html"><font color="#fff">Inicio</a> / <a href="/OVI_Grupo19/lectura/lectura.html"><font color="#fff">Material de Lectura</a> / <a href="/OVI_Grupo19/multimedia/multimedia.html"><font color="#fff">Material Multimedia</a> / <a href="index.html"><font color="#fff">Recursos</a> / <a href="/OVI_Grupo19/evaluacion/evaluacion.html"><font color="#fff">Evaluación</a></p>
 		<p>Grupo 19, Copyright &copy; 2019</p>
 	</footer>
 
