--- a/multimedia/multimedia.html
+++ b/multimedia/multimedia.html
@@ -16,7 +16,7 @@
 	<header>
 		<div class="contenedor" >
 			<div id="marca">
-				<h1><span class="resaltado">Grupo 19 </span> / OVI / Inicio</h1>
+				<h1><span class="resaltado">Grupo 19 </span> / OVI / Multimedia</h1>
 			</div>
 			<nav>
 				<ul>
