--- a/lectura/lectura.html
+++ b/lectura/lectura.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="OVI desde el mockup y guión">
 	<meta name="keywords" content="diseño web, mockups, guion">
 	<meta name="author" content="Grupo_19 Curso_Diseños_web">
-	<link rel="stylesheet" type="text/css" href="/OVI_grupo19/css/estilos.css">
+	<link rel="stylesheet" type="text/css" href="/OVI_Grupo19/css/estilos.css">
 </head>
 <body>
 
@@ -15,7 +15,7 @@
 	<header>
 		<div class="contenedor" >
 			<div id="marca">
-				<h1><span class="resaltado">Grupo 19 </span> / OVI / Inicio</h1>
+				<h1><span class="resaltado">Grupo 19 </span> / OVI / Lectura</h1>
 			</div>
 			<nav>
 				<ul>
