--- a/lectura/lectura.html
+++ b/lectura/lectura.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>OVI Grupo 19 | Bienvenidos</title>
-	<meta charset="utf-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 	<meta name="viewports" content="width=device-width">
 	<meta name="description" content="OVI desde el mockup y guión">
 	<meta name="keywords" content="diseño web, mockups, guion">
