--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<h3><img src="imagenes/ico2.png"/><a href="multimedia/multimedia.html">Material Multimedia</a>
 					<h3><img src="imagenes/ico3.png"/><a href="index.html">Recursos</a>
 					<h3><img src="imagenes/ico4.png"/><a href="evaluacion/evaluacion.html">Evaluación</a>
-			        <p><a href="index.html"><img src="imagenes/left.png"/></a> <a href="index.html"><img src="imagenes/right.png"/></a><p>
+			        <p><a href="lectura/lectura.html"><img src="imagenes/right.png"/></a><p>
 				</div>
 			</div>
 			<div id="bienvenido">
