--- a/lectura/contenido1.html
+++ b/lectura/contenido1.html
@@ -10,7 +10,7 @@
 
 <h1>INTRODUCCIÓN</h1>
 
-<img align = "center" src="imagenes/github.gif" width="15%" height="10%">
+<img align = "center" src="/OVI_Grupo19/imagenes/github.gif" width="15%" height="10%">
 
 <p align="justify">
 	El objetivo de esta guía es dar a conocer unos conocimientos de nivel básico/intermedio sobre el funcionamiento de Git, las diversas posibilidades que ofrece Github y por último aplicar todo lo aprendido de manera práctica siguiendo una metodología.
