--- a/evaluacion/evaluacion.html
+++ b/evaluacion/evaluacion.html
@@ -40,10 +40,10 @@
                         <h3><img src="/OVI_Grupo19/imagenes/ico0.png"/><a href="../index.html">Inicio</a>
 			  <h3><img src="/OVI_Grupo19/imagenes/ico1.png"/><a href="/OVI_Grupo19/lectura/lectura.html">Material de Lectura</a>
                             <h3><img src="/OVI_Grupo19/imagenes/ico2.png" /><a href="/OVI_Grupo19/multimedia/multimedia.html">Material Multimedia</a>
-                                <h3><img src="/OVI_Grupo19/imagenes/ico3.png" /><a href="../index.html">Recursos</a>
+                                <h3><img src="/OVI_Grupo19/imagenes/ico3.png" /><a href="/OVI_Grupo19/recursos/recursos.html">Recursos</a>
                                     <h3><img src="/OVI_Grupo19/imagenes/ico4.png" /><a href="/OVI_Grupo19/evaluacion/evaluacion.html">Evaluación</a>
                                         <p>
-                                            <a href="../index.html"><img src="/OVI_Grupo19/imagenes/left.png" /></a>
+                                            <a href="/OVI_Grupo19/recursos/recursos.html"><img src="/OVI_Grupo19/imagenes/left.png" /></a>
                                             <p>
                 </div>
             </div>
@@ -79,7 +79,7 @@
                 <font color="#fff">Material de Lectura</a> /
             <a href="/OVI_Grupo19/multimedia/multimedia.html">
                 <font color="#fff">Material Multimedia</a> /
-            <a href="../index.html">
+            <a href="/OVI_Grupo19/recursos/recursos.html">
                 <font color="#fff">Recursos</a> /
             <a href="/OVI_Grupo19/evaluacion/evaluacion.html">
                 <font color="#fff">Evaluación</a>
