--- a/recursos/recursos.html
+++ b/recursos/recursos.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
     <title>OVI Grupo 19 | Bienvenidos</title>
@@ -6,7 +7,7 @@
     <meta name="description" content="OVI desde el mockup y guión">
     <meta name="keywords" content="diseño web, mockups, guion">
     <meta name="author" content="Grupo_19 Curso_Diseños_web">
-    <link rel="stylesheet" type="text/css" href="css/estilos.css">
+    <link rel="stylesheet" type="text/css" href="/OVI_Grupo19/css/estilos.css">
 </head>
 <body>
 
@@ -15,7 +16,7 @@
     <header>
         <div class="contenedor" >
             <div id="marca">
-                <h1><span class="resaltado">Grupo 19 </span> / OVI / Inicio</h1>
+                <h1><span class="resaltado">Grupo 19 </span> / OVI / Recursos</h1>
             </div>
             <nav>
                 <ul>
@@ -35,12 +36,12 @@
             <div id="fondo">
                 <div id="menu">
                     <h2><a>Contenido:</a>
-                    <h3><img src="imagenes/ico1.png"/><a href="index.html">Inicio</a>
-                    <h3><img src="imagenes/ico1.png"/><a href="index.html">Material de Lectura</a>
-                    <h3><img src="imagenes/ico2.png"/><a href="index.html">Material Multimedia</a>
-                    <h3><img src="imagenes/ico3.png"/><a href="index.html">Recursos</a>
-                    <h3><img src="imagenes/ico4.png"/><a href="index.html">EvaluaciÃ³n</a>
-                    <p><a href="index.html"><img src="imagenes/left.png"/></a> <a href="index.html"><img src="imagenes/right.png"/></a><p>
+                    <h3><img src="/OVI_Grupo19/imagenes/ico0.png"/><a href="../index.html">Inicio</a>
+                    <h3><img src="/OVI_Grupo19/imagenes/ico1.png"/><a href="/OVI_Grupo19/lectura/lectura.html">Material de Lectura</a>
+                    <h3><img src="/OVI_Grupo19/imagenes/ico2.png"/><a href="/OVI_Grupo19/multimedia/multimedia.html">Material Multimedia</a>
+                    <h3><img src="/OVI_Grupo19/imagenes/ico3.png"/><a href="/OVI_Grupo19/recursos/recursos.html">Recursos</a>
+                    <h3><img src="/OVI_Grupo19/imagenes/ico4.png"/><a href="/OVI_Grupo19/evaluacion/evaluacion.html">Evaluación</a>
+                    <p><a href="/OVI_Grupo19/multimedia/multimedia.html"><img src="imagenes/left.png"/></a> <a href="/OVI_Grupo19/evaluacion/evaluacion.html"><img src="imagenes/right.png"/></a><p>
                 </div>
             </div>
             <div id="bienvenido">
@@ -64,14 +65,14 @@
     </section>  
 
 
-    <!AquÃ­ va la ficha técnica>
+    <Aquí va la ficha técnica>
     <section id="ficha">
         <div class="contenedor">
             <div id="info">
-                 <h2><a>Ficha tÃ©cnica</a>
-                <h5><a>Curso: DiseÃ±o de Sitios Web - 301122</a> | <a>Unidad: Fase 3: ConstrucciÃ³n</a> | <a>Actividad: Crear un OVI en formato WEB con HTML5 y CSS3.</a> | <a>Tutor: Ing. Josue Ignacio Ochoa.</a>
+                 <h2><a>Ficha Técnica</a>
+                <h5><a>Curso: Diseño de Sitios Web - 301122</a> | <a>Unidad: Fase 3: Construcción</a> | <a>Actividad: Crear un OVI en formato WEB con HTML5 y CSS3.</a> | <a>Tutor: Ing. Josue Ignacio Ochoa.</a>
                 <h5><a>Grupo: 301122_19</a> | <a>Estudiantes: Jorge Eliecer Arredondo, Cod.10017722</a> | <a>Manuel Alejandro Ramirez, Cod</a> | <a>Angela Patricia Males, Cod.</a> | <a>Oscar Isidro Rodriguez, Cod.</a>
-                <h5><a>Universidad Nacional, Abierta y a Distancia, UNAD. Escuela de Ciencias BÃ¡sicas, TecnologÃ­a e IngenierÃ­a, ECBTI. Abril 11 de 2019</a>
+                <h5><a>Universidad Nacional, Abierta y a Distancia, UNAD. Escuela de Ciencias Básicas, Tecnología e Ingeniería, ECBTI. Abril 11 de 2019</a>
             </div>
         </div>  
     </section>  
@@ -79,9 +80,10 @@
 
     <!AquÃ­ van el piecero>
     <footer>
-        <p><a href="index.html"><font color="#fff">Inicio</a> / <a href="index.html"><font color="#fff">Material de Lectura</a> / <a href="index.html"><font color="#fff">Material Multimedia</a> / <a href="index.html"><font color="#fff">Recursos</a> / <a href="index.html"><font color="#fff">EvaluaciÃ³n</a></p>
+        <p><a href="../index.html"><font color="#fff">Inicio</a> / <a href="/OVI_Grupo19/lectura/lectura.html"><font color="#fff">Material de Lectura</a> / <a href="/OVI_Grupo19/multimedia/multimedia.html"><font color="#fff">Material Multimedia</a> / <a href="/OVI_Grupo19/recursos/recursos.html"><font color="#fff">Recursos</a> / <a href="/OVI_Grupo19/evaluacion/evaluacion.html"><font color="#fff">Evaluación</a></p>
         <p>Grupo 19, Copyright &copy; 2019</p>
     </footer>
 
 </body>
 </html>
+
