--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="OVI desde el mockup y guión">
 	<meta name="keywords" content="diseño web, mockups, guion">
 	<meta name="author" content="Grupo_19 Curso_Diseños_web">
-	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+	<link rel="stylesheet" type="text/css" href="css/estiloinicio.css">
 </head>
 <body>
 <div id="sfczrkefclkk6y97s8r2w52mt6jp27jymk8"></div><script type="text/javascript" src="https://counter6.wheredoyoucomefrom.ovh/private/counter.js?c=zrkefclkk6y97s8r2w52mt6jp27jymk8&down=async" async></script><noscript><a href="https://www.contadorvisitasgratis.com" title="contadores web"><img src="https://counter6.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=zrkefclkk6y97s8r2w52mt6jp27jymk8" border="0" title="contadores web" alt="contadores web"></a></noscript>
