--- a/index.html
+++ b/index.html
@@ -16,19 +16,15 @@
 	</div>
 	
 	<Aquí va la cabecera>
+	<div id="autores">
+		<img src="imagenes/autores.png">
+	</div>
+
 	<header>
 		<div class="contenedor" >
 			<div id="marca">
 				<h1><span class="resaltado">Grupo 19 </span> / OVI / Inicio</h1>
 			</div>
-			<nav>
-				<ul>
-					<form>
-					<input type="email" name="email" placeholder="Ingrese su email...">
-					<button type="submit" class="boton1">Suscribete</button>
-					</form>
-				</ul>
-			</nav>
 		</div>
 	</header>
 
