--- a/recursos/recursos.html
+++ b/recursos/recursos.html
@@ -46,6 +46,7 @@
             </div>
             <div id="bienvenido">
                 <h2><a>Recursos</a>
+                    <div id="recursos">
                 <h5><a>Apreciado estudiante, estos son los recursos necesarios para realizar su procesos prácticos.</a>
                     
                 <h2><a>Descargar Consola</a>
@@ -59,7 +60,7 @@
                 <h2><a>Sitio sugerido para HTML5</a>
                     <h5><a>Apreciado estudiante en el siguiente link encontrara una pagina que sugerimos para realizar la creacion de su sito en HTML5</a>
                 <p><a href="https://html-online.com/">https://html-online.com//</a></p>
-
+                        </div>
                     
         </div>  
     </section>  
