--- a/recursos/recursos.html
+++ b/recursos/recursos.html
@@ -58,7 +58,7 @@
                 <p><a href="https://github.com/">https://github.com/</a></p>
 
                 <h4><a>Sitio sugerido para HTML5</a>
-                    <h6><a>Apreciado estudiante en el siguiente link encontrara una pagina que sugerimos para realizar la creacion de su sito en HTML5</a>
+                    <h6><a>En el siguiente link encontrara una pagina que sugerimos para realizar la creacion de su sito en HTML5</a>
                 <p><a href="https://html-online.com/">https://html-online.com//</a></p>
                         </div>
                     
