--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 			<div id="fondo">
 				<div id="menu">
 					<h2><a>Contenido:</a>
-					<h3><img src="imagenes/ico1.png"/><a href="index.html">Inicio</a>
 					<h3><img src="imagenes/ico1.png"/><a href="lectura/lectura.html">Material de Lectura</a>
 					<h3><img src="imagenes/ico2.png"/><a href="multimedia/multimedia.html">Material Multimedia</a>
 					<h3><img src="imagenes/ico3.png"/><a href="/OVI_Grupo19/recursos/recursos.html">Recursos</a>
 					<h3><img src="imagenes/ico4.png"/><a href="evaluacion/evaluacion.html">Evaluación</a>
+					<h3><img src="imagenes/autor.png"/><a href="index2.html">Autores del OVI</a>
 			        <p><a href="lectura/lectura.html"><img src="imagenes/right.png"/></a><p>
 				</div>
 			</div>
