--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	
 	<Aquí va la cabecera>
 	<div id="autores">
-		<img src="imagenes/autores.png">
+		<img href="index2.html" src="imagenes/autores.png">
 	</div>
 
 	<header>
