--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	
 	<Aquí va la cabecera>
 	<div id="autores">
-		<img href="index2.html" src="imagenes/autores.png">
+		<a href="index2.html"><img  src="imagenes/autores.png"></a>
 	</div>
 
 	<header>
