--- a/multimedia/multimedia.html
+++ b/multimedia/multimedia.html
@@ -47,7 +47,7 @@
 			<div id="bienvenido">
 				<h2><a>Multimedia</a>
 				<h5><a>Apreciado estudiante, en este espacio ponemos a su disposición, el material de Audio y Video </a>
-				<h5><a>necesario para complementar su aprendizaje.</a><p></p>
+				<h5><a>necesario para complementar su aprendizaje.</a>
 	
 	
 				<a href="audio.html" target="iframe">Audio</a> |
