--- a/recursos/recursos.html
+++ b/recursos/recursos.html
@@ -41,7 +41,7 @@
                     <h3><img src="/OVI_Grupo19/imagenes/ico2.png"/><a href="/OVI_Grupo19/multimedia/multimedia.html">Material Multimedia</a>
                     <h3><img src="/OVI_Grupo19/imagenes/ico3.png"/><a href="/OVI_Grupo19/recursos/recursos.html">Recursos</a>
                     <h3><img src="/OVI_Grupo19/imagenes/ico4.png"/><a href="/OVI_Grupo19/evaluacion/evaluacion.html">Evaluación</a>
-                    <p><a href="/OVI_Grupo19/multimedia/multimedia.html"><img src="imagenes/left.png"/></a> <a href="/OVI_Grupo19/evaluacion/evaluacion.html"><img src="imagenes/right.png"/></a><p>
+                    <p><a href="/OVI_Grupo19/multimedia/multimedia.html"><img src="/OVI_Grupo19/imagenes/left.png"/></a> <a href="/OVI_Grupo19/evaluacion/evaluacion.html"><img src="/OVI_Grupo19/imagenes/right.png"/></a><p>
                 </div>
             </div>
             <div id="bienvenido">
