--- a/lectura/lectura.html
+++ b/lectura/lectura.html
@@ -46,7 +46,7 @@
 			</div>
 			<div id="bienvenido">
 				<h2><a>Material de Lectura</a>
-				<div><A HREF="paginas/parte1.html" target="iframe"><IMG SRC="imagenes/pag1.png" ></A><A HREF="paginas/parte2.html" target="iframe"><IMG SRC="imagenes/parte3.png" ></A><A HREF="paginas/index3.html" target="iframe"><IMG SRC="imagenes/pag3.png" ></A><A HREF="paginas/pagre.html" target="iframe"><IMG SRC="imagenes/pag1.png" ></A></div>
+				<div><A HREF="/OVI_Grupo19/lectura/paginas/parte1.html" target="iframe"><IMG SRC="/OVI_Grupo19/imagenes/pag1.png" ></A><A HREF="/OVI_Grupo19/lectura/paginas/parte2.html" target="iframe"><IMG SRC="/OVI_Grupo19/imagenes/parte3.png" ></A><A HREF="/OVI_Grupo19/lectura/paginas/index3.html" target="iframe"><IMG SRC="/OVI_Grupo19/imagenes/pag3.png" ></A><A HREF="/OVI_Grupo19/lectura/paginas/pagre.html" target="iframe"><IMG SRC="/OVI_Grupo19/imagenes/pag1.png" ></A></div>
 				<iframe name="iframe" width="800" height="300" src="material.html" frameborder="0" scrolling="yes" ></iframe>
 
 			</div>
