--- a/index2.html
+++ b/index2.html
@@ -12,9 +12,6 @@
 <body>
 	
 	<Aquí va la cabecera>
-	<div id="autores">
-		<a href="index2.html"><img  src="imagenes/autores.png"></a>
-	</div>
 
 	<header>
 		<div class="contenedor" >
@@ -41,7 +38,7 @@
 			</div>
 			<div id="bienvenido">
 				<h2><a>Autores del OVI</a>
-        <img src="imagenes/autores2.png"  width="800" high:"300">
+					<p><img src="imagenes/autores2.png"  width="800" high:"350"></p>
 			</div>
 		</div>	
 	</section>	
