--- a/evaluacion/paginas/index.html
+++ b/evaluacion/paginas/index.html
@@ -7,7 +7,7 @@
         </HEAD> 
         <BODY>
 
-            <div align="center"><a title="Evaluación" href="https://www.onlineexambuilder.com/es/git-github-html5-y-css3/exam-278176"><img src="/OVI_Grupo19/imagenes/evalua.png" /></a></div>
+            <div align="center"><a title="Evaluación" href="https://www.onlineexambuilder.com/es/git-github-html5-y-css3/exam-278176"><img src="/OVI_Grupo19/imagenes/evalua.png" width="200" height="200"/></a></div>
 
         </BODY> 
 
