div para autores

--- a/index2.html
+++ b/index2.html
@@ -38,7 +38,9 @@
 			</div>
 			<div id="bienvenido">
 				<h2><a>Autores del OVI</a>
-					<p><img src="imagenes/autores2.png"  width="800" high:"350"></p>
+					<div id="autores2">
+					<p><img src="imagenes/autores2.png"  width="800" high:"400"></p>
+					</div>
 			</div>
 		</div>	
 	</section>	
