--- a/index2.html
+++ b/index2.html
@@ -39,7 +39,7 @@
 			<div id="bienvenido">
 				<h2><a>Autores del OVI</a>
 					<div id="autores2">
-					<p><img src="imagenes/autores2.png"  width="800" high:"400"></p>
+					<img src="imagenes/autores2.png"  width="800" height:"400">
 					</div>
 			</div>
 		</div>	
